# edmdata

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: edm240.rs
src/: lib.rs  main.rs  query.rs  svg.rs  task.rs
src/api/: edm.rs  member.rs  mod.rs  si.rs
src/data/: edm.rs  member.rs  mod.rs  party.rs  si.rs
