[package]
name = "edmdata"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = { version = "*", features = ["chrono-0_4"] }
chrono = { version = "*", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["full"] }
futures-util = "0.3.32"
itertools = "0.14.0"
mongodb = { version = "3.7.0", features = ["bson-3"] }
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
resvg = "0.47.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
svg = "0.18.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
